<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/postan"
        android:textColor="@color/angka"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/following"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kiriman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/kiriman"
        android:textColor="@color/angka"
        app:layout_constraintEnd_toStartOf="@+id/diikuti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post" />

    <TextView
        android:id="@+id/following"
        style="@style/TextContext.1"
        android:text="@string/following"
        android:textColor="@color/angka"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/followers"
        app:layout_constraintStart_toEndOf="@+id/post"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/followers"
        android:textColor="@color/angka"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/following"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diikuti"
        style="@style/TextContext.1"
        android:text="@string/diikuti"
        android:textColor="@color/angka"
        app:layout_constraintEnd_toStartOf="@+id/pengikut"
        app:layout_constraintStart_toEndOf="@+id/kiriman"
        app:layout_constraintTop_toBottomOf="@+id/following" />

    <TextView
        android:id="@+id/pengikut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/pengikut"
        android:textColor="@color/angka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/diikuti"
        app:layout_constraintTop_toBottomOf="@+id/followers" />




</android.support.constraint.ConstraintLayout>